infrastructures/lemoncluster/kube-prometheus-stack/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: monitoring
  labels:
    app.kubernetes.io/managed-by: flux
    istio-injection: enabled
