infrastructures/lemoncluster/kube-prometheus-stack/gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: grafana-gateway
  namespace: istio-system
  annotations:
    external-dns.alpha.kubernetes.io/hostname: "grafana.lem.devkuban.com"
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "grafana.lem.devkuban.com"
      tls:
        httpsRedirect: true
    - port:
        number: 443
        name: https
        protocol: HTTPS
      hosts:
        - "grafana.lem.devkuban.com"
      tls:
        mode: SIMPLE
        credentialName: wildcard-lem-devkuban-com-tls
